<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
<LinearLayout
  android:layout_width="wrap_content"
  android:layout_height="wrap_content" android:background="@drawable/backg" android:orientation="vertical">
<TextView android:id="@+id/TextView01" android:layout_height="wrap_content" android:textColor="#000" android:text="@string/str_track_name" android:layout_width="fill_parent" android:textSize="16px"></TextView><EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/ed_save_name"></EditText><LinearLayout android:id="@+id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content">
<TextView android:id="@+id/TextView02" android:layout_height="wrap_content" android:textColor="#000" android:text="@string/str_track_date" android:layout_width="160px" android:textSize="16px"></TextView>
<TextView android:id="@+id/TextView03" android:layout_height="wrap_content" android:text="@string/str_track_hour" android:textColor="#000" android:layout_width="160px" android:textSize="16px"></TextView>
</LinearLayout>

<LinearLayout android:id="@+id/LinearLayout02" android:layout_width="wrap_content" android:layout_height="wrap_content"><EditText android:layout_height="wrap_content" android:layout_width="160px" android:id="@+id/ed_save_date"></EditText>
<EditText android:layout_height="wrap_content" android:layout_width="160px" android:id="@+id/ed_save_hour"></EditText>
</LinearLayout>
<TextView android:id="@+id/TextView04" android:layout_height="wrap_content" android:textColor="#000" android:text="@string/str_track_time" android:layout_width="fill_parent" android:textSize="16px"></TextView>
<EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/ed_save_time"></EditText>
<TextView android:id="@+id/TextView05" android:layout_height="wrap_content" android:textColor="#000" android:text="@string/str_track_distance" android:layout_width="fill_parent" android:textSize="16px"></TextView>
<EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/ed_save_distance"></EditText>
<LinearLayout android:id="@+id/LinearLayout03" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:id="@+id/TextView06" android:layout_height="wrap_content" android:textColor="#000" android:text="@string/str_track_avspeed" android:layout_width="160px" android:textSize="16px"></TextView>

<TextView android:id="@+id/TextView07" android:layout_height="wrap_content" android:textColor="#000" android:text="@string/str_track_maxspeed" android:layout_width="160px" android:textSize="16px"></TextView>
</LinearLayout>
<LinearLayout android:id="@+id/LinearLayout04" android:layout_width="wrap_content" android:layout_height="wrap_content"><EditText android:layout_height="wrap_content" android:layout_width="160px" android:id="@+id/ed_save_avspeed"></EditText>
<EditText android:layout_height="wrap_content" android:layout_width="160px" android:id="@+id/ed_save_maxspeed"></EditText>
</LinearLayout>
<TextView android:id="@+id/TextView08" android:layout_height="wrap_content" android:textColor="#000" android:text="@string/str_track_points" android:layout_width="fill_parent" android:textSize="16px"></TextView>
<EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/ed_save_number"></EditText>
</LinearLayout>
</ScrollView>