<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/backg">
	<TextView 
	android:id="@+id/TextView01" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content" 
	android:textColor="#FF0000" 
	android:textSize="40px" 
	android:text="@string/str_gps_status" 
	android:layout_marginLeft="60px">
	</TextView>
	<LinearLayout 
	android:id="@+id/LinearLayout01" 
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent" 
	android:layout_marginTop="10px">
		<TextView 
		android:id="@+id/TextView02" 
		android:layout_height="wrap_content" 
		android:text="@string/str_satellite" 
		android:layout_width="240px" 
		android:textSize="20px" 
		android:textColor="#000000">
		</TextView>
		<TextView 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="0" android:textSize="20px" 
		android:id="@+id/tv_satellite_number" 
		android:textColor="#000000">
		</TextView>
	</LinearLayout>
	<LinearLayout android:id="@+id/LinearLayout02" 
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent" 
	android:layout_marginTop="20px">
		<TextView android:id="@+id/TextView04" 
		android:layout_height="wrap_content" 
		android:text="@string/str_time" 
		android:layout_width="240px" 
		android:textSize="20px" 
		android:textColor="#000000">
		</TextView>
		<TextView android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="00:00:00" 
		android:textSize="20px" 
		android:id="@+id/tv_time" 
		android:textColor="#000">
		</TextView>
	</LinearLayout>
	<LinearLayout android:id="@+id/LinearLayout03" 
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent" 
	android:layout_marginTop="20px">
		<TextView android:id="@+id/TextView06" 
		android:layout_height="wrap_content" 
		android:text="@string/str_altitude" 
		android:layout_width="240px" 
		android:textSize="20px" 
		android:textColor="#000000">
		</TextView>
		<TextView android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="0.00" 
		android:textSize="20px" 
		android:id="@+id/tv_altitude" 
		android:textColor="#000">
		</TextView>
	</LinearLayout>
	<LinearLayout 
	android:id="@+id/LinearLayout04" 
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent" 
	android:layout_marginTop="20px">
		<TextView 
		android:id="@+id/TextView08" 
		android:layout_height="wrap_content" 
		android:text="@string/str_latitude" 
		android:layout_width="240px" 
		android:textSize="20px" 
		android:textColor="#000000">
		</TextView>
		<TextView
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="0.00" 
		android:textSize="20px" 
		android:id="@+id/tv_latitude" 
		android:textColor="#000">
		</TextView>
	</LinearLayout>
	<LinearLayout 
	android:id="@+id/LinearLayout05" 
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent" 
	android:layout_marginTop="30px">
		<TextView android:id="@+id/TextView10" 
		android:layout_height="wrap_content" 
		android:text="@string/str_longitude" 
		android:layout_width="240px" 
		android:textSize="20px" 
		android:textColor="#000000"></TextView>
		<TextView 
		android:layout_height="wrap_content" 
		android:text="0.00" 
		android:layout_width="240px" 
		android:textSize="20px" 
		android:id="@+id/tv_longitude" 
		android:textColor="#000000">
		</TextView>
	</LinearLayout>
	<LinearLayout 
	android:id="@+id/LinearLayout06" 
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent" 
	android:layout_marginTop="40px">
		<TextView 
		android:id="@+id/TextView12" 
		android:layout_height="wrap_content" 
		android:text="@string/str_speed" 
		android:textSize="20px" android:layout_width="160px" 
		android:textColor="#000000">
		</TextView>
		<TextView 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="0.00" 
		android:textSize="30px" 
		android:id="@+id/tv_speed" 
		android:textColor="#000000">
		</TextView>
		<TextView 
		android:id="@+id/TextView14" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="Km/h" 
		android:layout_marginLeft="10px" 
		android:textSize="20px" 
		android:textColor="#000">
		</TextView>
	</LinearLayout>
	<LinearLayout 
	android:id="@+id/LinearLayout07" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content" 
	android:layout_marginLeft="100px" 
	android:layout_marginTop="20px">
		<Button 
		android:id="@+id/Button02" 
		android:layout_height="wrap_content" 
		android:text="@string/sr_exit" 
		android:layout_marginLeft="20px" 
		android:layout_width="80px">
		</Button>
	</LinearLayout>
</LinearLayout>

